fix: change src image

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 </div>
                 <div class="aboutUs__image">
-                    <img src="photo/aboutUs.JPG" alt="bouquets">
+                    <img src="photo/aboutUs.jpg" alt="bouquets">
                 </div>
             </div>
         </section>
